--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-#FUENTES: https://www.dns-oarc.net/tools/dnsperf
+### FUENTES: https://www.dns-oarc.net/tools/dnsperf
 
 - sudo apt install -y libssl-dev libldns-dev libck-dev libnghttp2-dev ;
 - wget https://www.dns-oarc.net/files/dnsperf/dnsperf-2.9.0.tar.gz ;
@@ -8,9 +8,16 @@
 - sudo make ;
 - sudo make install ;
 
-#COMANDOS RECOMENDADO
-#dnsperf -s {dns-ip} -T 128 -p 53 -d 
-#while sleep 0.1s; do host google.com {dns-ip}; done
-#FILES DE PRUEBA: https://github.com/DNS-OARC/sample-query-data.git
+### COMANDOS RECOMENDADO
+### dnsperf -s {dns-ip} -T 128 -p 53 -d 
+### while sleep 0.1s; do host google.com {dns-ip}; done
+### FILES DE PRUEBA: https://github.com/DNS-OARC/sample-query-data.git
+
+Comando para ejecutar test
+- dnsperf -s {ip} -p 53 -d {doc_name}.tsv
+Ejecutar con varios hilos use la opcion -T
+- dnsperf -s {ip} -p 53 -d {doc_name}.tsv -T 4
+
+
 
 
