--- a/README.me
+++ b/README.me
@@ -15,9 +15,9 @@
 
 Comando para ejecutar test
 - dnsperf -s {ip} -p 53 -d {doc_name}.tsv
+
+- dnsperf -s 186.96.91.53  -p 53 -d dnsperf_test_queries_1M.tsv
+- dnsperf -s 186.96.91.53  -p 53 -d dnsperf_test_queries_100K.tsv
+
 Ejecutar con varios hilos use la opcion -T
 - dnsperf -s {ip} -p 53 -d {doc_name}.tsv -T 4
-
-
-
-
